--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,6 +13,8 @@
     <!-- CSS Files -->
     <link href="{{ $.Site.BaseURL }}css/bootstrap.min.css" rel="stylesheet" />
     <link href="{{ $.Site.BaseURL }}css/now-ui-kit.css?v=1.1.0" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ $.Site.BaseURL }}css/style.css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css" rel="stylesheet" type="text/css">
 </head>
 
 </html>
