--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,40 @@
 {{ partial "header.html" . }}
 
 <body>
+    <div class="container">
+        <header class="pegado" id="navegacion">
+            <nav class="navbar navbar-expand-lg bg-info">
+                <div class="container">
+                    <div class="navbar-translate">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Me!</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Experiencia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Contacto!</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="justifiy-content-end">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link">Proyectos</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+    </div>
     <!-- Titulo -->
     <div class="container">
         <div class="card">
@@ -16,15 +50,16 @@
         </div>
     </div>
 
+
     <!-- Acerca -->
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <div class="text-center">
-                    <p class="lead">
+                    <p class="lead text-justify">
                         {{ $.Site.Params.about }}
                     </p>
-                    <p class="lead">
+                    <p class="lead text-justify">
                         {{ safeHTML $.Site.Data.acerca_de.acerca_de.sobre_mi.headline }}
                     </p>
                 </div>
@@ -39,6 +74,15 @@
                 <!-- Experiencia -->
                 <div>
                     <h2 class="tipography-line">Experiencia</h2>
+                    {{ range .Site.Data.acerca_de.acerca_de.experiencia }}
+                    <h5>{{ .trabajo.puesto }}
+                        <span class="small tag float-right">{{ .trabajo.tiempo }}</span>
+                    </h5>
+                    <h6>{{ .trabajo.ubicacion }}</h6>
+                    <p class="text-justify">
+                        {{ .trabajo.que_hice }}
+                    </p>
+                    {{ end }}
                 </div>
             </div>
         </div>
@@ -111,6 +155,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="section" data-background-color="black">
+        <div class="container">
+            {{ partial "contacto.html" . }}
         </div>
     </div>
     </div>
