smooth scroll añadido

--- a/layouts/partials/contacto.html
+++ b/layouts/partials/contacto.html
@@ -1,4 +1,4 @@
-<div class="card" data-background-color="orange">
+<div class="card" data-background-color="orange" id="contacto">
     <div class="card-body">
         <h3 class="card-title">Contáctame!</h3>
         <form action="">
