--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ partial "header.html" . }}
 
 <body>
+    
     <!-- Titulo -->
     <div class="container">
         <div class="card">
@@ -15,45 +16,46 @@
             </div>
         </div>
     </div>
+
     <!-- Nav -->
     <div class="container sticky-top">
-        <header class="pegado" id="navegacion">
-            <nav class="navbar navbar-expand-lg bg-info">
-                <div class="container">
-                    <div class="navbar-translate">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Me!</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Experiencia</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Skills</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Contacto!</a>
-                            </li>
-                        </ul>
+            <header class="pegado" id="navegacion">
+                <nav class="navbar navbar-expand-lg bg-info">
+                    <div class="container">
+                        <div class="navbar-translate">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a href="#me" class="nav-link">Me!</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#experiencia" class="nav-link">Experiencia</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#skills" class="nav-link">Skills</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#contacto" class="nav-link">Contacto!</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="justifiy-content-end">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a href="" class="nav-link">Blog</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="" class="nav-link">Proyectos</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="justifiy-content-end">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="" class="nav-link">Proyectos</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </div>
-
+                </nav>
+            </header>
+        </div>
 
     <!-- Acerca -->
-    <div class="container">
+
+    <div class="container" id="me">
         <div class="card">
             <div class="card-body">
                 <div class="text-center">
@@ -69,7 +71,7 @@
     </div>
 
     <!-- Experiencia -->
-    <div class="container">
+    <div class="container" id="experiencia">
         <div class="card">
             <div class="card-body">
                 <!-- Experiencia -->
@@ -89,7 +91,8 @@
         </div>
     </div>
 
-    <div class="container">
+
+    <div class="container" id="skills">
         <div class="card">
             <div class="card-body">
                 <!-- Skills -->
