--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,5 +8,6 @@
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/plugins/jquery.sharrre.js"></script>
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/plugins/nouislider.min.js"></script>
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/now-ui-kit.js"></script>
+    <script type="text/javascript" src="{{ .Site.BaseURL }}js/smooth-scroll.js"></script>
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/init.js"></script>
 </footer>
