--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,52 @@
 {{ partial "header.html" . }}
 
-<body>
-    
+<body class="sidebar-collapse">
+
+    <!-- Nav -->
+    <nav class="navbar fixed-top navbar-expand-lg bg-primary navbar-transparent" color-on-scroll="40">
+        <div class="navbar-translate">
+            <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-bar bar1"></span>
+                <span class="navbar-toggler-bar bar2"></span>
+                <span class="navbar-toggler-bar bar3"></span>
+            </button>
+        </div>
+        <div class="container collapse navbar-collapse" id="navigation">
+            <div class="justify-content-start">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#me">Me!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experiencia">Experiencia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-placement="bottom" href="#skills">
+                            Skills
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-placement="bottom" href="#contacto">Contáctame!
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" data-placement="bottom" href="#arriba">Top!
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <!-- Titulo -->
     <div class="container">
         <div class="card">
-            <div class="card-body">
+            <div class="card-body" id="arriba">
                 <div class="photo-container">
                     <img src="{{ $.Site.BaseURL }}img/niklas.png" alt="" class="mx-auto d-block">
                 </div>
@@ -16,42 +57,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Nav -->
-    <div class="container sticky-top">
-            <header class="pegado" id="navegacion">
-                <nav class="navbar navbar-expand-lg bg-info">
-                    <div class="container">
-                        <div class="navbar-translate">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a href="#me" class="nav-link">Me!</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#experiencia" class="nav-link">Experiencia</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#skills" class="nav-link">Skills</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#contacto" class="nav-link">Contacto!</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="justifiy-content-end">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a href="" class="nav-link">Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="" class="nav-link">Proyectos</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-            </header>
-        </div>
 
     <!-- Acerca -->
 
@@ -156,6 +161,18 @@
                             style="width: 60%;">
                             <span class="progress-value">60%</span>
                         </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="container text-center">
+                        <h3>Uso de tecnologías web modernas!</h3>
+                        <i class="fab fa-html5 fa-7x"></i>
+                        <i class="fab fa-css3-alt fa-7x"></i>
+                        <i class="fab fa-js fa-7x"></i>
+                        <i class="fab fa-php fa-7x"></i>
+                        <i class="fab fa-laravel fa-7x"></i>
+                        <i class="fab fa-react fa-7x"></i>
                     </div>
                 </div>
             </div>
