pagina home principal lista version alpha

--- a/layouts/partials/contacto.html
+++ b/layouts/partials/contacto.html
@@ -14,7 +14,7 @@
                 <label for="mensaje">Su mensaje</label>
                 <textarea name="" id="mensaje" cols="30" rows="10" class="form-control"></textarea>
             </div>
-            <button class="btn btn-neutral btn-round btn-lg text-center">Enviar!</button>
+            <button type="submit" class="btn btn-neutral btn-round btn-lg text-center">Enviar!</button>
         </form>
     </div>
 </div>
