upgradeando la pagina

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,4 +10,5 @@
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/smooth-scroll.js"></script>
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/sweetalert2.all.js"></script>
     <script type="text/javascript" src="{{ .Site.BaseURL }}js/init.js"></script>
+    <script src="{{ $.Site.BaseURL }}js/list_group.js"></script>
 </footer>
