--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{{ $.Site.BaseURL }}css/style.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css" rel="stylesheet" 
     type="text/css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.css">
     <script type="text/javascript" src="{{ $.Site.BaseURL }}js/fontawesome-all.js"></script>
 </head>
 
